--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <script>
         async function checkAPIStatus() {
             const apiData = [
-                { displayname: "Status", API: "api.json" } // APIエンドポイントを適宜変更
+                { displayname: "Status", API: "https://fljpapi.jp/api/v2/fortnitestatus" } ,
+                { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" } ,
+                { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" } ,
             ];
 
             for (const item of apiData) {
