タイプミスを修正

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             const apiData = [
                 { displayname: "Status", API: "https://fljpapi.jp/api/v2/fortnitestatus" } ,
                 { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" } ,
-                { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" } ,
+                { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" } 
             ];
 
             for (const item of apiData) {
