エンドポイントの追加

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         const apiData = [
             { displayname: "Status", API: "https://fljpapi.jp/api/v2/fortnitestatus" },
             { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" },
-            { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" }
+            { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" },
+            { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" } ,
+            { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true" } 
         ];
 
         async function checkAPIStatus() {
