エラーの通知

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <body>
     <h1>FLJPV2APIStatus</h1>
     <h2>FLJP(ブリ)のv2APIのステータスを見れるページです。</h2>
+    <p>当Webサイトの問題かなにかで、一部のAPIがエラー状態と表示されます。この問題を調査しています。</p>
     <div id="statusContainer"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
