--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" },
             { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" } ,
             { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true" },
-            { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" }
+            { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
+            { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion" }
         ];
 
         async function checkAPIStatus() {
