--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" } ,
             { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true"},
             { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
-            { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion"}
+            { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion"},
+            { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion"}
         ];
 
         async function checkAPIStatus() {
