二モニックAPIの追加

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true"},
             { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
             { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion"},
-            { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion"}
+            { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion"},
+            { displayname: "二モニック", API: "https://fljpapi.jp/api/v2/links/fn/set_br_playlists"}
         ];
 
         async function checkAPIStatus() {
