--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <h2>FLJP(ブリ)のv2APIのステータスを見れるページです。</h2>
     <p>当Webサイトの問題かなにかで、一部のAPIがエラー状態と表示されます。この問題を調査しています。</p>
     <div id="statusContainer"></div>
+    <h3>Build</h3>
+    <div id="buildapi"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
@@ -43,12 +45,18 @@
             { displayname: "Status", API: "https://fljpapi.jp/api/v2/fortnitestatus" },
             { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" },
             { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" },
-            { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" } ,
-            { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true"},
+            { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" },
+            { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true" },
             { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
-            { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion"},
-            { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion"},
-            { displayname: "二モニック", API: "https://fljpapi.jp/api/v2/links/fn/set_br_playlists"}
+            { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion" },
+            { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion" },
+            { displayname: "二モニック", API: "https://fljpapi.jp/api/v2/links/fn/set_br_playlists" }
+        ];
+        const buildapi = [
+            { displayname: "Windows", API: "https://fljpapi.jp/api/v2/build/Windows" },
+            { displayname: "iOS", API: "https://fljpapi.jp/api/v2/build/iOS" },
+            { displayname: "Andoroid", API: "https://fljpapi.jp/api/v2/build/Andoroid" },
+            { displayname: "Xbox", API: "https://fljpapi.jp/api/v2/build/Xbox" }
         ];
 
         async function checkAPIStatus() {
@@ -81,8 +89,41 @@
             }
         }
 
+        async function buildapis() {
+            const container = document.getElementById('buildapi');
+            container.innerHTML = ''; 
+
+            for (const item of buildapi) {
+                const statusBox = document.createElement('div');
+                statusBox.className = 'status-box';
+                statusBox.innerHTML = `
+                    <span>${item.displayname}</span>
+                    <span class="dot" id="dot-${item.displayname}"></span>
+                `;
+                container.appendChild(statusBox);
+
+                try {
+                    const response = await axios.get(item.API);
+                    const dot = document.getElementById(`dot-${item.displayname}`);
+                    if (response.status >= 200 && response.status < 300) {
+                        dot.style.backgroundColor = 'green';
+                    } else if (response.status >= 200 && response.status < 500) {
+                        dot.style.backgroundColor = 'yellow';
+                    } else if (response.status >= 500) {
+                        dot.style.backgroundColor = 'red';
+                    }
+                } catch (error) {
+                    const dot = document.getElementById(`dot-${item.displayname}`);
+                    dot.style.backgroundColor = 'red';
+                }
+            }
+        }
+
         
-        window.onload = checkAPIStatus;
+        window.onload = function() {
+            checkAPIStatus();
+            buildapis();
+        };
     </script>
 </body>
 </html>
