AndoroidBuildAPIのエンドポイント修正

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         const buildapi = [
             { displayname: "Windows", API: "https://fljpapi.jp/api/v2/build/Windows" },
             { displayname: "iOS", API: "https://fljpapi.jp/api/v2/build/iOS" },
-            { displayname: "Andoroid", API: "https://fljpapi.jp/api/v2/build/Andoroid" },
+            { displayname: "Andoroid", API: "https://fljpapi.jp/api/v2/build/Android" },
             { displayname: "Xbox", API: "https://fljpapi.jp/api/v2/build/Xbox" }
         ];
 
