Buildエンドポイントの追加

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             { displayname: "Windows", API: "https://fljpapi.jp/api/v2/build/Windows" },
             { displayname: "iOS", API: "https://fljpapi.jp/api/v2/build/iOS" },
             { displayname: "Andoroid", API: "https://fljpapi.jp/api/v2/build/Android" },
-            { displayname: "Xbox", API: "https://fljpapi.jp/api/v2/build/Xbox" }
+            { displayname: "XboxOne", API: "https://fljpapi.jp/api/v2/build/Xbox%20One" },
+            { displayname: "PS4", API: "https://fljpapi.jp/api/v2/build/PS4" },
+            { displayname: "PS5", API: "https://fljpapi.jp/api/v2/build/PS5" }
         ];
 
         async function checkAPIStatus() {
