--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         const apiData = [
             { displayname: "Status", API: "https://fljpapi.jp/api/v2/fortnitestatus" },
             { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" },
-            { displayname: "Build", API: "https://fljpapi.jp/api/v2/build" },
+            { displayname: "Build", API: "https://fljpapi.jp/api/v2/build/" },
             { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" },
             { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true" },
             { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
