🔧メンテナンスのデータを追加

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <h3>beta版API</h3>
     <div id="bataapi"></div>
     <p>現在beta版のAPIがDBに存在しません。</p>
+    <h2>過去のメンテナンスや問題</h2>
+    <h3>APIメンテナンス</h3>
+    <p>全エンドポイントのCORS対応及びBuildのWindowが403を変えす問題の修正</p>
+    <p>期間：8月７日 10時00分〜12時30分</p>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
