過去のメンテナンスの更新

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <div id="bataapi"></div>
     <p>現在beta版のAPIがDBに存在しません。</p>
     <h2>過去のメンテナンスや問題</h2>
-    <h3>APIメンテナンス</h3>
+    <h3>BuildAPIのWindowsの修正|完了</h3>
+    <p>BuildAPIのWindowsが利用できなくなった問題</p>
+    <p>8月9日の深夜修正（推測）</p>
+    <h3>APIメンテナンス|完了</h3>
     <p>全エンドポイントのCORS対応及びBuildのWindowが403を変えす問題の修正</p>
     <p>期間：8月７日 10時00分〜12時30分</p>
 
