--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             { displayname: "EventFlag", API: "https://fljpapi.jp/api/v2/timeline" },
             { displayname: "Build", API: "https://fljpapi.jp/api/v2/build/" },
             { displayname: "cloudstorage", API: "https://fljpapi.jp/api/v2/cloudstorage" },
-            { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows&cosmeticsinfo=true" },
+            { displayname: "トーナメント", API: "https://fljpapi.jp/api/tournamentlist?region=ASIA&platform=Windows" },
             { displayname: "News", API: "https://fljpapi.jp/api/v2/news?platform=windows&language=ja&serverRegion=ASIA&tags=Product.BR&country=JP" },
             { displayname: "LookUP", API: "https://fljpapi.jp/api/v2/lookup?accountid=rgc_rion" },
             { displayname: "RANK", API: "https://fljpapi.jp/api/v2/rank/rgc_rion" },
