--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <div id="bataapi"></div>
     <p>現在beta版のAPIがDBに存在しません。</p>
     <h2>過去のメンテナンスや問題</h2>
+    <h3>ランクAPIが動作しない問題</h3>
+    <p>現在、ランクAPIが正しく動作しない問題を調査しているようです。</p>
     <h3>BuildAPIのWindowsの修正|完了</h3>
     <p>BuildAPIのWindowsが利用できなくなった問題</p>
     <p>8月9日の深夜修正（推測）</p>
