🔧全角を半角に修正、

--- a/index .html
+++ b/index .html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FLJPV2APIStatus</title>
+    <title>FLJPAPIStatus</title>
     <style>
         body {
             background: linear-gradient(to right, #e0f7fa, #add8e6);
@@ -58,7 +58,7 @@
     <p>8月9日の深夜修正（推測）</p>
     <h3>APIメンテナンス|完了</h3>
     <p>全エンドポイントのCORS対応及びBuildのWindowが403を変えす問題の修正</p>
-    <p>期間：8月７日 10時00分〜12時30分</p>
+    <p>期間：8月7日 10時00分〜12時30分</p>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
